fixing z-index

--- a/style.css
+++ b/style.css
@@ -1,23 +1,13 @@
 body {
     padding: 0;
     margin: 0;
-}
-
-@font-face {
-    font-family: myFirstFont;
-    src: url(../asset/Mystic-Crystal.ttf);
-}
-
-@font-face {
-    font-family: buntu;
-    src: url(../asset/ubuntu.otf);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .container {
     background: #ffffff;
     font-family: serif;
-    letter-spacing: 5px;
 }
 
 .header {
@@ -25,6 +15,7 @@ body {
     height: 52px;
     position: fixed;
     width: 100%;
+    z-index: 999;
 
 }
 
@@ -54,7 +45,7 @@ body {
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 999;
 }
 
 .dropdown-content a {
@@ -178,7 +169,7 @@ body {
     height: 100%;
     background-color: black;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     transition: left .4s cubic-bezier(.47, .13, .15, .89);
 }
 
